# KdTree

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: KdTree.hpp  Point2D.hpp  Point3D.hpp
include/Acceleration/: KdTree.hpp  PointKdTree.hpp
include/Geometry/: Mesh.hpp  MeshAttrib.hpp  MeshLinearOps.hpp  MeshOp.hpp  PointCloud.hpp
include/Linear/: AABBox.hpp  Vector.hpp
include/Math/: Vector2.hpp  Vector3.hpp
include/Primitive/: AABBox.hpp  Bound.hpp  Range.hpp  Types.hpp  Vector.hpp
include/Random/: Vector.hpp
include/Sampling/: Vector.hpp
src/: KdTree.h  Point2D.h  Point3D.h
